# CommandlineParser

./: ArgumentParser.hpp  CMakeLists.txt  Explanation  main.cpp
Example/: CMakeLists.txt  main.cpp
Test/: CMakeLists.txt  main.cpp  tests.cpp
arg_parser/inc/: argument_parser.hpp
arg_parser/src/: argument_parser.cpp
src/: ArgumentParser.hpp
